--- a/src/app/[locale]/(public)/components/Maintenance/Card/Card.module.scss
+++ b/src/app/[locale]/(public)/components/Maintenance/Card/Card.module.scss
@@ -11,7 +11,8 @@
     box-shadow 1s ease;
 
   &:hover {
-    box-shadow: 0px 0px 4px 0px #6c6c6c2e;
+    box-shadow:
+      0px 5px 15px rgba(0, 0, 0, 0.05),
   }
 
   .image {
@@ -24,8 +25,9 @@
   }
 
   .content {
-    padding: 10px 20px 20px 20px;
+    padding: 10px 20px 30px 20px;
     height: 100%;
+    width: 100%;
 
     .heading {
       font-family: var(--bukra-bold);
@@ -51,7 +53,7 @@
     }
 
     .button {
-      width: 100%;
+      margin-top: auto;
 
       & > * {
         width: 100%;
