--- a/src/app/[locale]/(public)/components/Products/Products.module.scss
+++ b/src/app/[locale]/(public)/components/Products/Products.module.scss
@@ -2,9 +2,9 @@
 @import '../../styles/variables';
 
 .products {
-  margin: 10rem auto;
+  margin: 0 auto;
   max-width: $maxWidth;
-  padding: 0 40px;
+  padding: 10rem 40px;
   font-family: $secondaryFont;
 
   .detail {
@@ -18,7 +18,7 @@
   }
 
   .cards {
-    margin-top: 4rem;
+    margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1.6rem;
@@ -56,12 +56,7 @@
       align-items: center;
       box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
       border: 1px solid;
-
-      border-image-source: linear-gradient(
-        238.57deg,
-        #ffffff 60.11%,
-        rgba(144, 144, 144, 0.2) 99.01%
-      );
+      border: 1px solid;
       box-shadow: 0px 0px 10px 0px #9e9e9e29;
 
       border-radius: 16px;
@@ -107,14 +102,10 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        padding: 16px;
+        padding: 14px;
         z-index: -1;
         border-radius: 20px;
-        background-image: linear-gradient(
-          90deg,
-          var(--primary-900),
-          var(--primary-300)
-        );
+        background-image: $gradient-linear-full;
       }
 
       &:hover::after,
@@ -159,6 +150,6 @@
 
   button {
     margin: 40px auto;
-    width: 40%;
+    width: 35%;
   }
 }
