--- a/src/app/[locale]/(public)/ui/Button/Button.module.scss
+++ b/src/app/[locale]/(public)/ui/Button/Button.module.scss
@@ -10,19 +10,16 @@
   outline: none;
   border-radius: 10px;
   border: 2px solid $primary-color;
-  padding: 16px 24px;
+  padding: 20px 56px;
   text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  @include flex(center, center, center, 15px);
   cursor: pointer;
   margin-top: 12px;
   transition:
-    background-color 1s ease,
-    border 1s ease,
-    color 1s ease;
-
+  background-color 1s ease,
+  border 1s ease,
+  color 1s ease;
+  
   &::before {
     content: '';
     position: absolute;
@@ -39,11 +36,11 @@
     transition: opacity 0.5s ease;
     opacity: 0;
   }
-
+  
   &:hover::before {
     opacity: 1;
   }
-
+  
   svg {
     fill: var(--primary-900);
     position: relative;
@@ -54,11 +51,11 @@
     position: relative;
     z-index: 1;
   }
-
+  
   &:hover {
     color: white;
     border: 2px solid transparent;
-
+    
     svg {
       fill: white;
     }
@@ -67,6 +64,7 @@
 
 .filledBtn {
   @include font(var(--roboto), 20px, 600);
+  @include flex(center, center, center, 15px);
   color: white;
   background-color: $primary-color;
   position: relative;
@@ -74,12 +72,8 @@
   outline: none;
   border: none;
   border-radius: 8px;
-  padding: 16px 56px;
+  padding: 20px 56px;
   text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
   cursor: pointer;
   margin-top: 12px;
   transition:
